--- a/client/src/assets/scss/Expenses/ExpensesList.scss
+++ b/client/src/assets/scss/Expenses/ExpensesList.scss
@@ -10,7 +10,6 @@
         }
         .expensesList_btn_cont_wrapper{
             width: 84%;
-            height: 100vh;
             padding: 10px 30px 10px 30px;
             .expensesList_top_content{
                 border: 1px solid #fff;
@@ -19,6 +18,24 @@
                 .expensesList_top_body_cont{
                     background-color: #fff;
                     height: 4rem;
+                }
+                button.expensesList_mode_switch{
+                    border: 1px solid;
+                    padding: 3px 21px;
+                    border-radius: 5px;
+                    font-weight: 500;
+                    background-color: #f3f3f3;
+                }
+                .expensesList_mode_switch_datalist{
+                    float: right;
+                    padding: 40px 70px;
+                }
+                button.expensesList_edit_submit_btn {
+                    border: 2px solid #fdd7b3;
+                    padding: 2px 13px;
+                    border-radius: 7px;
+                    background: #2e2eff;
+                    color: white;
                 }
                 .expensesList_mid_body_cont{
                     height: 118vh;
@@ -71,6 +88,26 @@
                                     }
                                 }
                                 .expensesList_table_body{
+                                    .year-separator {
+                                        background-color: #fff; 
+                                        height: 20px;
+
+                                        .horizontal-line-cell {
+                                            padding: 0; 
+                                            border: none;
+                                        }
+
+                                        .horizontal-line {
+                                            width: 150%; 
+                                            background-color: #808080; 
+                                            opacity: 50%;
+                                            height: 2px; 
+                                            border: none;
+                                            margin-top: 8px; 
+                                            margin-bottom: 8px;
+                                            margin-left: 12px;
+                                        }
+                                    }
                                     .expensesList_table_body_content_horizontal{
                                         border: none;
                                         &:nth-child(odd){
@@ -82,6 +119,9 @@
                                         .expensesList_table_body_content_vertical{
                                             border: none;
                                             text-align: center;
+                                            input{
+                                                width: 100px;
+                                            }
                                         }
                                     }
                                 }
