--- a/client/src/assets/scss/Employees/EmployeesRegistration.scss
+++ b/client/src/assets/scss/Employees/EmployeesRegistration.scss
@@ -116,11 +116,12 @@
                                         border-radius: 10px;
                                     }
                                 }
-                                .EmployeesRegistration_business_division_name-div{
+                                // 
+                                .EmployeesRegistration_company_name-div{
                                     display: flex;
                                     flex-direction: column;
                                     margin-bottom: 10px;
-                                    .EmployeesRegistration_business_division_name{
+                                    .EmployeesRegistration_company_name{
                                         margin-bottom: 5px;
                                     }
                                     .EmployeesRegistration_select-option{
@@ -149,11 +150,13 @@
                                         border-radius: 10px;
                                     }
                                 }
-                                .EmployeesRegistration_company_name-div{
+                                // 
+                                
+                                .EmployeesRegistration_business_division_name-div{
                                     display: flex;
                                     flex-direction: column;
                                     margin-bottom: 10px;
-                                    .EmployeesRegistration_company_name{
+                                    .EmployeesRegistration_business_division_name{
                                         margin-bottom: 5px;
                                     }
                                     .EmployeesRegistration_select-option{
@@ -166,6 +169,7 @@
                                         }
                                     }
                                 }
+                                // 
                             }
                         }
                     }
