--- a/client/src/assets/scss/Projects/ProjectsRegistration.scss
+++ b/client/src/assets/scss/Projects/ProjectsRegistration.scss
@@ -76,11 +76,11 @@
                                 width: calc(100%/3);
                             }
                             .projectsRegistration_left-form-div{
-                                .projectsRegistration_client-div{
+                                .projectsRegistration_year-div{
                                     display: flex;
                                     flex-direction: column;
                                     margin-bottom: 10px;
-                                    .projectsRegistration_client{
+                                    .projectsRegistration_year{
                                         margin-bottom: 5px;
                                     }
                                     .projectsRegistration_select-option{
@@ -91,6 +91,20 @@
                                         option{
                                             text-align: left;
                                         }
+                                    }
+                                }
+                                .projectsRegistration_project-type-div{ 
+                                    display: flex;
+                                    flex-direction: column;
+                                    margin-bottom: 10px;
+                                    .projectsRegistration_project-type{
+                                        margin-bottom: 5px;
+                                    }
+                                    input{
+                                        width: 80%;
+                                        height: 40px;
+                                        border: 1px solid #000;
+                                        border-radius: 10px;
                                     }
                                 }
                                 .projectsRegistration_sales_revenue-div{
@@ -107,11 +121,53 @@
                                         border-radius: 10px;
                                     }
                                 }
-                                .projectsRegistration_non-operating-expenses-div{ 
+                                .projectsRegistration_employee-expenses-div{ 
                                     display: flex;
                                     flex-direction: column;
                                     margin-bottom: 10px;
-                                    .projectsRegistration_non-operating-expenses{
+                                    .projectsRegistration_employee-expenses{
+                                        margin-bottom: 5px;
+                                    }
+                                    input{
+                                        width: 80%;
+                                        height: 40px;
+                                        border: 1px solid #000;
+                                        border-radius: 10px;
+                                    }
+                                }
+                                .projectsRegistration_operating-profit-div{ 
+                                    display: flex;
+                                    flex-direction: column;
+                                    margin-bottom: 10px;
+                                    .projectsRegistration_operating-profit{
+                                        margin-bottom: 5px;
+                                    }
+                                    input{
+                                        width: 80%;
+                                        height: 40px;
+                                        border: 1px solid #000;
+                                        border-radius: 10px;
+                                    }
+                                }
+                                .projectsRegistration_ordinary-profit-div{ 
+                                    display: flex;
+                                    flex-direction: column;
+                                    margin-bottom: 10px;
+                                    .projectsRegistration_ordinary-profit{
+                                        margin-bottom: 5px;
+                                    }
+                                    input{
+                                        width: 80%;
+                                        height: 40px;
+                                        border: 1px solid #000;
+                                        border-radius: 10px;
+                                    }
+                                }
+                                .projectsRegistration_ordinary-profit-margin-div{ 
+                                    display: flex;
+                                    flex-direction: column;
+                                    margin-bottom: 10px;
+                                    .projectsRegistration_ordinary-profit-margin{
                                         margin-bottom: 5px;
                                     }
                                     input{
@@ -128,7 +184,7 @@
                                     flex-direction: column;
                                     margin-bottom: 10px;
                                     .projectsRegistration_project_name{
-                                        margin-bottom: 0px;
+                                        margin-bottom: 5px;
                                     }
                                     input{
                                         width: 80%;
@@ -156,6 +212,77 @@
                                         border-radius: 10px;
                                     }
                                 }
+                                .projectsRegistration_client-div{ 
+                                    display: flex;
+                                    flex-direction: column;
+                                    margin-bottom: 10px;
+                                    .projectsRegistration_client{
+                                        margin-bottom: 5px;
+                                    }
+                                    .projectsRegistration_select-option{
+                                        width: 80%;
+                                        height: 40px;
+                                        border: 1px solid #000;
+                                        border-radius: 10px;
+                                    }
+                                }
+                                .projectsRegistration_cost-of-sale-div{ 
+                                    display: flex;
+                                    flex-direction: column;
+                                    margin-bottom: 10px;
+                                    .projectsRegistration_cost-of-sale{
+                                        margin-bottom: 5px;
+                                    }
+                                    input{
+                                        width: 80%;
+                                        height: 40px;
+                                        border: 1px solid #000;
+                                        border-radius: 10px;
+                                    }
+                                    input::-webkit-outer-spin-button,
+                                    input::-webkit-inner-spin-button {
+                                    -webkit-appearance: none;
+                                    margin: 0;
+                                    }
+                                }
+                                .projectsRegistration_indirect-employee-expense-div{ 
+                                    display: flex;
+                                    flex-direction: column;
+                                    margin-bottom: 10px;
+                                    .projectsRegistration_indirect-employee-expense{
+                                        margin-bottom: 5px;
+                                    }
+                                    input{
+                                        width: 80%;
+                                        height: 40px;
+                                        border: 1px solid #000;
+                                        border-radius: 10px;
+                                    }
+                                    input::-webkit-outer-spin-button,
+                                    input::-webkit-inner-spin-button {
+                                    -webkit-appearance: none;
+                                    margin: 0;
+                                    }
+                                }
+                                .projectsRegistration_non-operating-profit-div{ 
+                                    display: flex;
+                                    flex-direction: column;
+                                    margin-bottom: 10px;
+                                    .projectsRegistration_non-operating-profit{
+                                        margin-bottom: 5px;
+                                    }
+                                    input{
+                                        width: 80%;
+                                        height: 40px;
+                                        border: 1px solid #000;
+                                        border-radius: 10px;
+                                    }
+                                    input::-webkit-outer-spin-button,
+                                    input::-webkit-inner-spin-button {
+                                    -webkit-appearance: none;
+                                    margin: 0;
+                                    }
+                                }
                             }
                             .projectsRegistration_right-form-div{
                                 .projectsRegistration_business_division_name-div{ 
@@ -163,7 +290,7 @@
                                     flex-direction: column;
                                     margin-bottom: 10px;
                                     .projectsRegistration_business_division_name{
-                                        margin-bottom: 0px;
+                                        margin-bottom: 5px;
                                     }
                                     input{
                                         width: 80%;
@@ -184,12 +311,12 @@
                                         border-radius: 10px;
                                     }
                                 }
-                                .projectsRegistration_operating-income-div{ 
+                                .projectsRegistration_project-name-div{ 
                                     display: flex;
                                     flex-direction: column;
                                     margin-bottom: 10px;
-                                    .projectsRegistration_operating_income{
-                                        margin-bottom: 0px;
+                                    .projectsRegistration_project_name{
+                                        margin-bottom: 5px;
                                     }
                                     input{
                                         width: 80%;
@@ -203,6 +330,69 @@
                                     margin: 0;
                                     }
                                 }
+                                // ---------------
+                                .projectsRegistration_dispatch-labor-expense-div{ 
+                                    display: flex;
+                                    flex-direction: column;
+                                    margin-bottom: 10px;
+                                    .projectsRegistration_dispatch-labor-expense{
+                                        margin-bottom: 5px;
+                                    }
+                                    input{
+                                        width: 80%;
+                                        height: 40px;
+                                        border: 1px solid #000;
+                                        border-radius: 10px;
+                                    }
+                                    input::-webkit-outer-spin-button,
+                                    input::-webkit-inner-spin-button {
+                                    -webkit-appearance: none;
+                                    margin: 0;
+                                    }
+                                }
+                                // ------------------
+                                // ---------------
+                                .projectsRegistration_expense-div{ 
+                                    display: flex;
+                                    flex-direction: column;
+                                    margin-bottom: 10px;
+                                    .projectsRegistration_expense{
+                                        margin-bottom: 5px;
+                                    }
+                                    input{
+                                        width: 80%;
+                                        height: 40px;
+                                        border: 1px solid #000;
+                                        border-radius: 10px;
+                                    }
+                                    input::-webkit-outer-spin-button,
+                                    input::-webkit-inner-spin-button {
+                                    -webkit-appearance: none;
+                                    margin: 0;
+                                    }
+                                }
+                                // ------------------
+                                // ---------------
+                                .projectsRegistration_non-operating-expense-div{ 
+                                    display: flex;
+                                    flex-direction: column;
+                                    margin-bottom: 10px;
+                                    .projectsRegistration_non-operating-expense{
+                                        margin-bottom: 5px;
+                                    }
+                                    input{
+                                        width: 80%;
+                                        height: 40px;
+                                        border: 1px solid #000;
+                                        border-radius: 10px;
+                                    }
+                                    input::-webkit-outer-spin-button,
+                                    input::-webkit-inner-spin-button {
+                                    -webkit-appearance: none;
+                                    margin: 0;
+                                    }
+                                }
+                                // ------------------
                             }
                     }
                         .projectsRegistration_plus-btn{
