--- a/client/src/assets/scss/EmployeeExpenses/EmployeeExpensesRegistration.scss
+++ b/client/src/assets/scss/EmployeeExpenses/EmployeeExpensesRegistration.scss
@@ -126,6 +126,7 @@
                     display: flex;
                     flex-wrap: wrap;
                     gap: 20px;
+                    padding-bottom: 50px;
                     .employeeExpensesRegistration_project-group{
                       display: flex;
                       flex-direction: column;
